# graphlint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_PYPI.md  pyproject.toml
docs/en/: index.md
docs/en/api/: build.md  configure.md  exceptions.md  query.md
docs/en/architecture/: overview.md
docs/en/cli/: usage.md
docs/en/guide/: agent-integration.md  configuration.md  entry-detection.md  getting-started.md  warnings.md
docs/zh/: README.md  index.md
docs/zh/api/: build.md  configure.md  exceptions.md  query.md
docs/zh/architecture/: overview.md
docs/zh/cli/: usage.md
docs/zh/guide/: agent-integration.md  configuration.md  entry-detection.md  getting-started.md  warnings.md
graphlint/: __init__.py  agent_tools.py  api.py  cli.py  exceptions.py  params.py
graphlint/analyzer/: __init__.py  _ast_visitor.py  _graph_algo.py  _types.py  decorators.py  entry_detect.py  graph.py  imports.py  parser.py  warnings.py
graphlint/analyzer/language/: __init__.py  base.py  registry.py
graphlint/analyzer/language/python/: __init__.py  constants.py  (+4 more)
graphlint/config/: __init__.py  defaults.py  manager.py
graphlint/i18n/: __init__.py  en.py  zh_CN.py
graphlint/incremental/: __init__.py  _db_ops.py  indexer.py
graphlint/query/: __init__.py  engine.py  formatter.py  volume.py
graphlint/storage/: __init__.py  db.py  hashing.py  schema.py
tests/integration/: test_api.py  test_cli.py  test_data_transfer.py  test_dead_code_query.py  test_full_pipeline.py  test_incremental.py  test_json_output.py  test_rust_parse.py
tests/performance/: test_large_codebase.py
tests/unit/: test_auto_build.py  test_config.py  test_db.py  test_db_ops.py  test_decorators.py  test_engine.py  test_entry_detect.py  test_exceptions.py  test_formatter.py  test_graph.py  test_graph_algo.py  test_hashing.py  test_i18n.py  test_imports.py  test_mock_boundary.py  test_params.py  test_parser.py  test_rust_utils.py  test_schema.py  test_volume.py  test_warnings.py
(+6 files in other folders)
